welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:51: error: expected class or object definition
def forme(c:Color) {
^PatternPicture:61: error: Unmatched closing brace '}' ignored here
}
^